# RK_Logger

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
include/logger/: log.h  log_config.h  log_time.h
include/rk_logger/: config.h  log.h  log_config.h  log_time.h  logger.h
src/: config.cpp  log.cpp  log_config.cpp  log_time.cpp  logger.cpp
src/demonstration/: CMakeLists.txt  file1.cpp  file1.h  main.cpp  rk_config.txt
tests/: CMakeLists.txt  config_tests.cc  config_tests.h  logger_tests.cc  logger_tests.h
tests/include/rk_logger_tests/: test_base.h
tests/test_data/: rk_config.txt  rk_config.yaml
